Fixed issue with the page content shifting depending on if there is a scrollbar present or not

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,10 @@
   --desktop-width: 1200px;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   display: flex;
   flex-direction: column;
